<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rclcpp_mt_bug</name>
  <version>0.0.0</version>
  <description>Examples of rclcpp multi-thread executor</description>
  <maintainer email="jafar@picknik.ai">Jafar Abdi</maintainer>
  <license>BSD</license>
  <author>Jafar Abdi</author>
  <author email="jafar@picknik.ai">Jafar Abdi</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
